# PyOrigin

./: CHANGELOG.md  LICENSE  Makefile  README.md  logging.conf  pyproject.toml  requirements.txt  setup.py
docs/: argparse.md  glob.md  loguru.md
package_name/: __init__.py
src/package_name/: __init__.py  logger_cfg.py
src/package_name/entrypoints/: __init__.py  main.py
tests/: test_package_name.py
tutos/: path.md
