[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "package-name"
# version = "0.1.0"
dynamic = ["version"]
description = "A sample Python package"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
keywords = ["origin", "python3"]
requires-python = ">=3.8"

dependencies = [
    "requests>=2.25.1",
    "python-dotenv==1.0.0",
]

[tool.setuptools.dynamic]
version = { attr = "package_name.__version__" }

# Optional dependencies ------------------------------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "ipython",
    "pytest",
]
# export = [
#     "onnx>=1.12.0", # ONNX export
#     "coremltools>=7.0; platform_system != 'Windows' and python_version <= '3.11'", # CoreML supported on macOS and Linux
#     "scikit-learn>=1.3.2; platform_system != 'Windows' and python_version <= '3.11'", # CoreML k-means quantization
#     "openvino>=2024.0.0", # OpenVINO export
#     "tensorflow>=2.0.0", # TF bug https://github.com/ultralytics/ultralytics/issues/5161
#     "tensorflowjs>=3.9.0", # TF.js export, automatically installs tensorflow
#     "tensorstore>=0.1.63; platform_machine == 'aarch64' and python_version >= '3.9'", # for TF Raspberry Pi exports
#     "keras", # not installed automatically by tensorflow>=2.16
#     "flatbuffers>=23.5.26,<100; platform_machine == 'aarch64'", # update old 'flatbuffers' included inside tensorflow package
#     "numpy==1.23.5; platform_machine == 'aarch64'", # fix error: `np.bool` was a deprecated alias for the builtin `bool` when using TensorRT models on NVIDIA Jetson
#     "h5py!=3.11.0; platform_machine == 'aarch64'", # fix h5py build issues due to missing aarch64 wheels in 3.11 release
# ]
# solutions = [
#     "shapely>=2.0.0",    # shapely for point and polygon data matching
#     "streamlit",    # for live inference on web browser i.e `yolo streamlit-predict`
# ]
# logging = [
#     "comet", # https://docs.ultralytics.com/integrations/comet/
#     "tensorboard>=2.13.0",
#     "dvclive>=2.12.0",
# ]
# extra = [
#     "hub-sdk>=0.0.12", # Ultralytics HUB
#     "ipython", # interactive notebook
#     "albumentations>=1.4.6", # training augmentations
#     "pycocotools>=2.0.7", # COCO mAP
# ]

[project.urls]
"Homepage" = "https://ultralytics.com"
"Source" = "https://github.com/ultralytics/ultralytics"
"Documentation" = "https://docs.ultralytics.com"
"Bug Reports" = "https://github.com/ultralytics/ultralytics/issues"
"Changelog" = "https://github.com/ultralytics/ultralytics/releases"

[tool.isort]
line_length = 120
multi_line_output = 0

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 2
column_limit = 120
coalesce_brackets = true
spaces_around_power_operator = true
space_between_ending_comma_and_closing_bracket = true
split_before_closing_bracket = false
split_before_first_argument = false

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.docformatter]
wrap-summaries = 120
wrap-descriptions = 120
pre-summary-newline = true
close-quotes-on-newline = true
in-place = true

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mycmd = "package_name.__main__:main"
